[gd_scene load_steps=3 format=3 uid="uid://bpistdoud3sg3"]

[ext_resource type="Theme" uid="uid://jqhxocgoy8gg" path="res://addons/node_position_debugger/position_info_box_theme.tres" id="1_j3wqo"]
[ext_resource type="Script" path="res://addons/node_position_debugger/position_info_box.gd" id="1_jt23q"]

[node name="position_info_box" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_j3wqo")
script = ExtResource("1_jt23q")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 105.0
offset_bottom = 73.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
offset_right = 100.0
offset_bottom = 68.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
offset_left = 5.0
offset_top = 5.0
offset_right = 95.0
offset_bottom = 63.0

[node name="name_label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 90.0
offset_bottom = 14.0
text = "node_name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 18.0
offset_right = 90.0
offset_bottom = 18.0

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 22.0
offset_right = 90.0
offset_bottom = 54.0
columns = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
offset_right = 26.0
offset_bottom = 14.0
text = "pos:"
horizontal_alignment = 2

[node name="position_label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 30.0
offset_right = 90.0
offset_bottom = 14.0
text = "-123.0, 543.2"

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
offset_top = 18.0
offset_right = 26.0
offset_bottom = 32.0
text = "gpos:"
horizontal_alignment = 2

[node name="global_position_label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 30.0
offset_top = 18.0
offset_right = 90.0
offset_bottom = 32.0
text = "-123.0, 543.2"
